kqed_dev4/src/objects/Classification__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Code_Value__c</fullName>
        <label>Classification Code Value</label>
        <referenceTo>Classification_Code__c</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Type__c</fullName>
        <description>Equates to the Record Type</description>
        <inlineHelpText>Select a classification type</inlineHelpText>
        <label>Classification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Boards and Committees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Tagging &amp; Scoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Tagging &amp; Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey and Event Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference_Value__c</fullName>
        <inlineHelpText>Related to Preference</inlineHelpText>
        <label>Preference Value</label>
        <picklist>
            <controllingField>Preference__c</controllingField>
            <picklistValues>
                <fullName>Payment via EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCRB Founder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Auction Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Special Archangel Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Appeals/Solicitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Mail Renewal Only - No Other Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Guide Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Class Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Guest Auctioneer Invites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Invitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLS Special Invites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Leadership Event Invites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Program Invites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJORDONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUSIC *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEWS *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CULTURAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No MemberCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sustainer Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Leadership Circle Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Program Partner Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No End of Year Tax Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Circle Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <label>Preference</label>
        <picklist>
            <controllingField>Classification_Type__c</controllingField>
            <picklistValues>
                <fullName>Acknowledgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Gift Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MemberCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Range (pledge reported)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anonymous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Append</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Solicitation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>Please select a station to relate to the classification or preference regarding the station.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KCRW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TabName__c</fullName>
        <label>Classification Name</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Tagging &amp; Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Boards and Committees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey and Event Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Classification</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>classification_code__c</fullName>
        <label>TA Classification Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification_tabname__c</fullName>
        <description>delete when you can untangle the visual force page</description>
        <label>Classification Tab Name X</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification_value__c</fullName>
        <label>TA Classification Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>record_seq__c</fullName>
        <label>Record Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ta_classification_id__c</fullName>
        <externalId>true</externalId>
        <label>TA Classification ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Classification</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Classification #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classifications</pluralLabel>
    <recordTypes>
        <fullName>Communication</fullName>
        <active>true</active>
        <description>Marketing Preference - Email, Mail, Online, Name Rental, Renewals, Opt Out</description>
        <label>Communication Preferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Tagging_Scores</fullName>
        <active>true</active>
        <description>Identification on a contact or household regarding likelihood to give</description>
        <label>Data Tagging &amp; Scores</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Tagging_Scoring</fullName>
        <active>true</active>
        <description>Identification on a contact or household regarding likelihood to give</description>
        <label>Data Tagging &amp; Scoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>appeal</fullName>
        <active>true</active>
        <description>Preference by Station regarding appeals</description>
        <label>Appeal Preferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>benefit</fullName>
        <active>true</active>
        <description>Preference by Station regarding membership benefits &amp; premiums</description>
        <label>Benefit Preferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>member_category</fullName>
        <active>true</active>
        <description>CRB Founding Member, ARONLY, eMember, Green, 2 Year, Discounts</description>
        <label>Member Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ongoing_membership</fullName>
        <active>true</active>
        <description>Susatiner Payment Type, Employee Renewal, Lifetime Memberships, Renewals</description>
        <label>Ongoing Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>station_board_committee</fullName>
        <active>true</active>
        <description>Name of the Board or Committee that the contact participates currently or has in the past</description>
        <label>Station Boards and Committees</label>
    </recordTypes>
    <recordTypes>
        <fullName>station_partners</fullName>
        <active>true</active>
        <description>Affiliation with Teachers, Partners, Schools</description>
        <label>Station Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>survey_event_information</fullName>
        <active>true</active>
        <description>Survey Results, Disability &amp; Event Information</description>
        <label>Survey, Disability and Event Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>volunteer_preferences</fullName>
        <active>true</active>
        <description>Volunteer Preferences</description>
        <label>Volunteer Preferences</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>